--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "slim/twig-view": "^2.4"
+        "slim/twig-view": "^2.4",
+        "swiftmailer/swiftmailer": "^6.0",
+        "php-activerecord/php-activerecord": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
@@ -26,7 +28,8 @@
             "Tests\\": "tests/",
             "Utils\\": "utils/",
             "App\\" : "app/",
-            "Mock\\" : "mock/"
+            "Mock\\" : "mock/",
+            "Model\\" : "model/"
         }
     },
     "config": {
